# ai-spec-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
specs/: accessibility.md  ai-protocol.md  engineering.md  license-policy.md  security.md
src/ai_spec_kit/: __init__.py  cli.py
src/ai_spec_kit/templates/: ai-protocol.md  architecture.md  engineering.md  web-standards.md
