[project]
name = "ai-spec-kit"
version = "0.1.0"
description = "A specification-driven collaboration standard for AI-native engineering."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jeongyoul Kim", email = "ceise0226@naver.com" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
ai-spec = "ai_spec_kit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_spec_kit"]
